4-tls/resources/traefik-airlines-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "customers-ingress-secure"
  namespace: "traefik-airlines"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`customers.traefik-airlines.EXTERNAL_IP.sslip.io`)
      services:
        - name: customers-app
          port: 3000
  tls:
    certResolver: traefik-airlines
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "employees-ingress-secure"
  namespace: "traefik-airlines"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`employees.traefik-airlines.EXTERNAL_IP.sslip.io`)
      services:
        - name: employees-app
          port: 3000
  tls:
    certResolver: traefik-airlines
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "flights-ingress-secure"
  namespace: "traefik-airlines"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flights.traefik-airlines.EXTERNAL_IP.sslip.io`)
      services:
        - name: flights-app
          port: 3000
  tls:
    certResolver: traefik-airlines
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "tickets-ingress-secure"
  namespace: "traefik-airlines"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tickets.traefik-airlines.EXTERNAL_IP.sslip.io`)
      services:
        - name: tickets-app
          port: 3000
  tls:
    certResolver: traefik-airlines
